Added domain to notification; simplified code and removed inefficiencies; removed potential xss and enforced a strict CSP

--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,8 @@
 
   "options_ui": {
     "page": "popup/settings.html"
-  }
+  },
 
+  "content_security_policy": "default-src 'self'; style-src 'self'"
 
 }
